# rkyv-js

./: .editorconfig  .gitattributes  .gitignore  .yarnrc.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.src.json
.changeset/: codegen-redesign-publish.md  config.json  crisp-rats-push.md  tall-donuts-tell.md
.github/workflows/: ci.yml  codspeed.yml  release.yml
benchmark/: _specs.ts  access-vs-decode.ts  codspeed-complex-decode.ts  codspeed-complex-encode.ts  codspeed-primitives-decode.ts  codspeed-primitives-encode.ts  comparison.ts  decode.ts  encode.ts  primitives.ts
benchmark/capnp/: schema.capnp
benchmark/protobuf/: schema.proto  schema.ts
benchmarks/: _specs.ts  access-vs-decode.ts  codspeed-complex-decode.ts  codspeed-complex-encode.ts  codspeed-primitives-decode.ts  codspeed-primitives-encode.ts  comparison.ts  decode.ts  encode.ts  index.ts  primitives.ts  schema.ts
conformance/: Cargo.toml
conformance/cases/: bindings.decode.ts  bindings.encode.ts  bindings.ts  manifest.json  sip-hasher.ts  sip-map.ts
conformance/cases/arrays_tuples/: data.json  meta.json
conformance/cases/btree_map_str_1/: data.json  meta.json
conformance/cases/btree_map_str_100/: data.json  meta.json
conformance/cases/btree_map_str_5/: data.json  meta.json
conformance/cases/btree_map_str_6/: data.json  meta.json
conformance/cases/btree_map_str_empty/: meta.json
conformance/cases/btree_map_u32/: data.json  meta.json
conformance/cases/btree_set_str/: data.json  meta.json
conformance/cases/enums/: data.json  meta.json
conformance/cases/external_types/: data.json  meta.json
conformance/cases/float_specials/: data.json  meta.json
conformance/cases/hash_map_i32/: data.json  meta.json
conformance/cases/hash_map_str_1/: data.json  meta.json
conformance/cases/hash_map_str_100/: data.json  meta.json
conformance/cases/hash_map_str_5000/: data.json  meta.json
conformance/cases/hash_map_str_57/: data.json  meta.json
conformance/cases/hash_map_str_8/: data.json  meta.json
conformance/cases/hash_map_str_9/: data.json  meta.json
conformance/cases/hash_map_str_empty/: meta.json
conformance/cases/hash_map_struct_key/: data.json  meta.json
conformance/cases/hash_map_tuple_key/: data.json  meta.json
conformance/cases/hash_map_u32/: data.json  meta.json
conformance/cases/hash_map_u64/: data.json  meta.json
conformance/cases/hash_set_str/: data.json  meta.json
conformance/cases/hash_set_u32/: data.json  meta.json
conformance/cases/index_map_str/: data.json  meta.json
conformance/cases/index_map_str_empty/: data.json  meta.json
conformance/cases/index_map_u32/: data.json  meta.json
conformance/cases/index_set_str/: data.json  meta.json
conformance/cases/kitchen_sink/: data.json  meta.json
conformance/cases/options/: data.json  meta.json
conformance/cases/pointers/: data.json  meta.json
conformance/cases/primitives_basic/: data.json  meta.json
conformance/cases/primitives_extremes/: data.json  meta.json
conformance/cases/shared_rc/: data.json  meta.json
conformance/cases/sip_hashed_map/: data.json  meta.json
conformance/cases/strings/: data.json  meta.json
conformance/cases/vecs/: data.json  meta.json
conformance/formats/: .gitignore
conformance/formats/be/: Cargo.toml
conformance/formats/be/src/: main.rs
conformance/formats/cases-be/: data.json  manifest.json
conformance/formats/cases-pw16/: manifest.json
conformance/formats/cases-pw64/: manifest.json
conformance/formats/cases-unaligned/: manifest.json
conformance/formats/pw16/: Cargo.toml
conformance/formats/pw16/src/: main.rs
conformance/formats/pw64/: Cargo.toml
conformance/formats/pw64/src/: main.rs
conformance/formats/shared/: smoke.rs
conformance/formats/unaligned/: Cargo.toml
conformance/formats/unaligned/src/: main.rs
conformance/src/: canonical_json.rs  cases.rs  lib.rs  types.rs
crates/: Cargo.toml
crates/example/: Cargo.toml  build.rs  package.json
crates/example/examples/: debug_layout.rs
crates/example/fixtures/: game_state.txt  game_state_simple.txt  message_color.txt  message_move.txt  message_write.txt  person.txt  person_no_email.txt  point.txt
crates/example/src/: lib.rs
crates/rkyv-js-codegen/: Cargo.toml  README.md
crates/rkyv-js-codegen/src/: extractor.rs  generator.rs  lib.rs  types.rs
crates/rkyv-js-derive/: Cargo.toml
crates/rkyv-js-derive/src/: lib.rs
rkyv-example/: Cargo.toml  build.rs  package.json
rkyv-example/src/: lib.rs  remote.rs
rkyv-example/test/fixtures/arrayvec_buffer/: data.json
rkyv-example/test/fixtures/indexset_tags/: codec.ts
rkyv-example/test/fixtures/message_quit/: data.json
rkyv-example/test/fixtures/message_write/: data.json
rkyv-example/test/fixtures/person/: data.json
rkyv-example/test/fixtures/smallvec_data/: codec.ts
rkyv-example/test/fixtures/smol_str_config/: codec.ts
rkyv-example/test/fixtures/thin_vec_data/: codec.ts  data.json
rkyv-example/test/fixtures/uuid_record/: codec.ts
rkyv-js-codegen/: CHANGELOG.md  Cargo.toml  README.md  package.json
rkyv-js-codegen/src/: error.rs  expr.rs  extractor.rs  generator.rs  lib.rs  registry.rs  types.rs
scripts/: build.mjs  conformance.mjs  sync-cargo-version.mjs
src/: codec.ts  config.ts  core.ts  decode.ts  encode.ts  encoder.ts  index.ts  intrinsics.ts  jit.ts  layout.ts  primitives.ts  reader.ts  schema-encoder.ts  schema.ts  types.ts  writer.ts
src/core/: base.ts  codec.ts  decoder.ts  encoder.ts  format.ts  hasher.ts  layout.ts  meta.ts  reader.ts  writer.ts
test/: _canonical.ts  codec.test.ts  conformance-direction.test.ts  conformance-formats.test.ts  conformance-jit.test.ts  conformance.test.ts  hash.test.ts  jit-snapshot.test.ts  jit-snapshot.test.ts.snapshot  jit.test.ts  meta.test.ts  reader.test.ts  roundtrip.test.ts  sip-hasher.test.ts  text-codec-injection.test.ts  writer.test.ts
tests/: codec.test.ts  encoder.test.ts  integration.test.ts  reader.test.ts  roundtrip.test.ts  schema-encoder.test.ts  schema.test.ts  types.test.ts  union.test.ts
(+74 files in other folders)
