[workspace]
resolver = "2"
members = [
  "rkyv-js-codegen",
  "rkyv-example",
  "conformance",
]
# Format-profile smoke crates set global rkyv format features and must not
# share a build graph with the default-format workspace.
exclude = ["conformance/formats"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/cometkim/rkyv-js"
