[package]
name = "rkyv-js-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rkyv = { version = "0.8", features = ["bytecheck"] }
rkyv-js-codegen = { path = "../rkyv-js-codegen" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
rkyv-js-codegen = { path = "../rkyv-js-codegen" }

[[bin]]
name = "generate-fixtures"
path = "src/bin/generate_fixtures.rs"
