[package]
name = "rkyv-js-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rkyv = { version = "0.8", features = [
    "bytecheck",
    "uuid-1",
    "bytes-1",
    "smol_str-0_2",
    "thin-vec-0_2",
    "arrayvec-0_7",
    "smallvec-1",
    "tinyvec-1",
    "indexmap-2",
    "triomphe-0_1",
] }
rkyv-js-codegen = { path = "../rkyv-js-codegen" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
smol_str = { version = "0.2", features = ["serde"] }
thin-vec = { version = "0.2", features = ["serde"] }
arrayvec = { version = "0.7", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }
tinyvec = { version = "1", features = ["serde", "alloc"] }
indexmap = { version = "2", features = ["serde"] }
triomphe = "0.1"

[build-dependencies]
rkyv-js-codegen = { path = "../rkyv-js-codegen" }

[[bin]]
name = "generate-fixtures"
path = "src/bin/generate_fixtures.rs"
