[package]
name = "rkyv-js-codegen"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "TypeScript code generator for rkyv types"
repository = "https://github.com/cometkim/rkyv-js"
keywords = ["rkyv", "typescript", "codegen", "serialization"]
categories = ["development-tools::ffi", "encoding"]

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
walkdir = "2.5"

[dev-dependencies]
rkyv = { version = "0.8", features = ["bytecheck"] }
