[package]
name = "rkyv-js-codegen"
version.workspace = true
edition = "2024"
license = "MIT"
description = "TypeScript code generator for rkyv types"
repository = "https://github.com/cometkim/rkyv-js"
keywords = ["rkyv", "javascript", "typescript", "codegen", "serialization"]
categories = ["development-tools::ffi", "encoding"]

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
walkdir = "2.5"
