[package]
name = "rkyv-js-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Marker macro for rkyv-js TypeScript binding generation"
repository = "https://github.com/cometkim/rkyv-js"
keywords = ["rkyv", "typescript", "codegen", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

# No dependencies needed - this is a no-op macro
[dependencies]
